# bonsai-app

./: .gitignore  README.md  api.spec  components.json  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: main.yml
src/: App.css  App.tsx  main.tsx
src-python/: editor.py  reflect.py
src-tauri/: .env  Cargo.toml  build.rs  tauri.conf.json  test.db
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-01-27-092052_create_leafs/: up.sql
src-tauri/migrations/2024-02-27-082245_create_config/: up.sql
src-tauri/src/: bert.rs  cozo.rs  db.rs  filesystem.rs  lib.rs  main.rs  models.rs  ollama.rs  schema.rs
src/components/: theme-switcher.tsx
src/components/avatar/: BonsaiAvatar.tsx  LeafAvatar.tsx
src/components/chat/: ChatPanel.tsx
src/components/command/: commandk.tsx
src/components/editor/: BlockEditor.tsx  types.tsx
src/components/editor/bars/: EditorHeader.tsx  EditorInfo.tsx
src/components/editor/menus/: types.ts
src/components/editor/sidebar/: SideBarChat.tsx  Sidebar.tsx  TableOfContents.tsx
src/components/editor/styles/: index.css
src/components/leaf/: CreateLeafDialog.tsx  LeafCard.tsx  LeafDataTable.tsx  LeafGrid.tsx  LeafTable.tsx  patterns.ts
src/components/menubar/: Menu.tsx
src/components/sage/: SageDataTable.tsx  SageDialog.tsx
src/components/sidebar/: Sidebar.tsx
src/components/ui/: Icon.tsx  InputTextArea.tsx  PopoverMenu.tsx  Toolbar.tsx  button.tsx  command.tsx
src/extensions/: extension-kit.ts  index.ts
src/extensions/AILinter/: AILinter.ts  AILinterPlugins.ts  index.ts
src/extensions/AIParagraph/: AIParagraph.tsx  AIParagraphView.tsx  AIParagraphViewGroup.tsx  AIParagraphViewWithoutChat.tsx  index.ts  utils.ts
src/extensions/AIWorker/: AIWorker.ts  ai-worker.ts  index.ts
src/extensions/BlockID/: BlockID.ts  index.ts
src/extensions/CustomHighlight/: CustomHighlight.ts  index.ts
src/extensions/EmojiSuggestion/: suggestion.ts  types.ts
src/extensions/Figure/: Figure.ts
src/extensions/FontSize/: FontSize.ts
src/extensions/Image/: Image.ts
src/extensions/ImageBlock/: ImageBlock.ts
src/extensions/ImageUpload/: ImageUpload.ts
src/extensions/InlineChat/: InlineChat.tsx  index.ts
src/extensions/Link/: Link.ts
src/extensions/NotificationDot/: NotificationDot.tsx  index.ts
src/extensions/Reflect/: Reflect.tsx  index.ts
src/extensions/SlashCommand/: MenuList.tsx  SlashCommand.ts  groups.ts
src/extensions/TableOfContentNode/: TableOfContentNode.tsx  index.ts
src/hooks/: useDB.ts  useDarkMode.ts  useZoom.ts
src/hooks/ai/: useChat.ts
src/hooks/config/: useGetConfig.ts  useSetConfig.ts
src/hooks/editor/: useEditor.ts
src/hooks/leaf/: useCreateLeaf.ts  useDeleteLeaf.ts  useGetLeaf.ts  useListLeafs.ts  useSearchLeaf.ts  useUpdateLeaf.ts
src/hooks/sage/: useSages.ts
src/hooks/shortcuts/: useGlobalShortcuts.ts
src/lib/utils/: getRenderContainer.ts  index.ts  isCustomNodeSelected.ts
src/pages/: HomePage.tsx  LeafPage.tsx  PreferencesPage.tsx  SagePage.tsx
src/providers/: AppConfigProvider.tsx  ConfigProvider.tsx
src/types/: config.ts  leaf.ts  sage.ts
src/workers/: reflect.ts
(+33 files in other folders)
