[package]
name = "bonsai-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0", features = [ "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
dirs = "5.0.1"
chrono = "0.4.38"
time = "0.3.36"
tauri-plugin-shell = "2.0.0"
ollama-rs = "0.2.1"
sqlite-vec = "0.1.3"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
